# basic-c-quest

./: .gitignore  CMakeLists.txt  Makefile  README.md  game_map.c  game_map.h  main.c  rpg  string_tools.c  string_tools.h  ui_tools.c  ui_tools.h
map/: 1-art.txt  1-description.txt
maps/: 1-art.txt  1-description.txt  1001-art.txt  1001-description.txt  2-art.txt  2-description.txt  3-art.txt  3-description.txt  4-art.txt  4-description.txt  5-art.txt
